<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/theme_color_1"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/detail_last_seen"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/sadhu_sadhvi_tv_last_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22-08-2016"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="5dp">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:text="@string/detail_diksha_date"-->
            <!--android:textColor="@android:color/white" />-->

        <!--<TextView-->
            <!--android:id="@+id/sadhu_sadhvi_tv_diksha_date"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text=""-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="20sp"-->
            <!--android:textStyle="bold" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="15dp">-->

        <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_gravity="center"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginRight="10dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:orientation="vertical"&ndash;&gt;-->
        <!--&lt;!&ndash;android:padding="10dp">&ndash;&gt;-->

        <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:src="@mipmap/dadamap" />&ndash;&gt;-->
        <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->

        <!--<LinearLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:text="@string/detail_name"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="12sp" />-->

            <!--<TextView-->
                <!--android:id="@+id/sadhu_sadhvi_tv_name"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=""-->
                <!--android:textColor="@color/colorPrimaryDark"-->
                <!--android:textSize="15sp"-->
                <!--android:textStyle="bold" />-->

        <!--</LinearLayout>-->

    <!--</LinearLayout>-->
    <!-- -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/detail_diksha_date"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/sadhu_sadhvi_tv_diksha_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/detail_group_name"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sadhu_sadhvi_tv_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/detail_mobile_number"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sadhu_sadhvi_tv_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/detail_email_address"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sadhu_sadhvi_tv_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/detail_address"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sadhu_sadhvi_tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>