<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="21-Mar-2017"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"
                    android:text="Tuesday"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shubh_din"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/detail_swastik"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lunar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="अश्विन नवमी"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="this is a good day"
                    android:textAlignment="center" />

            </LinearLayout>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@mipmap/logo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginRight="4dp"/>

        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/event_layout"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_outline"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layout_outline_2"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/navigation_menu_events"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/event_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text=""
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:id="@+id/event_image"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="2dp"
                        android:layout_marginBottom="2dp"
                        android:scaleType="centerInside" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dadawadi_layout"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_outline"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dadawadi_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layout_outline_2"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/navigation_menu_dadawadi"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/dadawadi_image"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tirth_layout"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_outline"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tirth_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layout_outline_2"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/navigation_menu_tirth"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/tirth_image"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_circular_corner"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/manglik_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/splash" />

            <TextView
                android:id="@+id/manglik_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:text="Gurudev"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>